--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
-<titulo>LITTLE MONKEY</titulo>
+
 
 </head>
 
 <BODY></BODY>
 
-
+<header>LITTLE MONKEY</header>
 
 
 
